--- a/api_tests/Dockerfile
+++ b/api_tests/Dockerfile
@@ -1,25 +1,10 @@
 FROM ubuntu:latest
 
-LABEL AUTHOR="Martins Tararujs"
+LABEL AUTHOR="MT"
 
-RUN apt update && \
-apt install -y ruby-dev \
-libffi-dev \
-autoconf \
-bison \
-build-essential \
-libssl-dev \
-libyaml-dev \
-libreadline6-dev \
-zlib1g-dev \
-libncurses5-dev \
-libffi-dev \
-libgdbm6 \
-libgdbm-dev \
-libdb-dev \
-libmysqlclient-dev
-
-RUN gem install bundler
+RUN apt update
+RUN apt install -y ruby-dev libffi-dev autoconf bison build-essential libssl-dev libyaml-dev libreadline6-dev zlib1g-dev libncurses5-dev libffi-dev libgdbm6 libgdbm-dev libdb-dev libmysqlclient-dev
+RUN  gem install bundler
 
 WORKDIR /usr/src/api-tests
 COPY Gemfile ./
